<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_headline"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/headlines"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category"
        android:title="@string/category"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favourite"
        app:showAsAction="always|withText"/>

</menu>