<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.example.sridharjajoo.newsapp.core.Setttings.SettingsActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/news_source_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/times_of_india"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_times_of_india"
        android:layout_margin="10dp"/>

    <CheckBox
        android:id="@+id/the_hindu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_hindu"
        android:layout_margin="10dp"/>

    <CheckBox
        android:id="@+id/google_news_india"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_news_india"
        android:layout_margin="10dp"/>

</LinearLayout>